<resources>
    <string name="app_name" translatable="false">MySneakers</string>
    <string name="nome_snk">Name of Sneaker</string>
    <string name="limpar">Clear</string>
    <string name="tamanho">Size (number)</string>
    <string name="marca">Brand</string>
    <string name="colorway">Colorway</string>
    <string name="preco_or">Original Price</string>
    <string name="preco_rev">Resell Price</string>
    <string name="salvar">Save</string>
    <string name="erro_nomesnk">Name of Sneaker cannot be empty!</string>
    <string name="erro_marca">Brand cannot be empty!</string>
    <string name="campo_limpos">Fields clear</string>
    <string name="cb_possui">Already have?</string>
    <string name="cbpossui">Owns the SNK :)</string>
    <string name="cbnpossui">Don\'t own the SNK :(</string>
    <string name="snknovo">New</string>
    <string name="snkpusado">Little used</string>
    <string name="snkmusado">Very used</string>
    <string name="snkestnselecionado">SNK condition not selected</string>
    <string name="tamcm" translatable="false">cm</string>
    <string name="tamus" translatable="false">US</string>
    <string name="tambr" translatable="false">BR</string>
    <string name="tamuk" translatable="false">UK</string>
    <string name="tameur" translatable="false">EUR</string>
    <string name="tamtipo">"Type of size: "</string>
    <string name="tamtiponenhum">No size type selected</string>
    <string name="tipotam">Type of size</string>

    <string name="nike" translatable="false">Nike</string>
    <string name="adidas" translatable="false">Adidas</string>
    <string name="asics" translatable="false">Asics</string>
    <string name="new_balance" translatable="false">New Balance</string>
    <string name="yeezy" translatable="false">Yeezy</string>
    <string name="puma" translatable="false">Puma</string>
    <string name="vans" translatable="false">Vans</string>
    <string name="reebok" translatable="false">Reebok</string>
    <string name="converse" translatable="false">Converse</string>
    <string name="vert" translatable="false">Vert</string>

    <string name="foi_clicado">Was clicked!</string>

    <string name="novo_cadastro">New</string>
    <string name="sobre">About it</string>
    <string name="nome_aluno" translatable="false">Lucas Key Shibata Mitsudo</string>
    <string name="curso_aluno">IF69S - Programming for Mobile Devices - C91 (2022_02)</string>
    <string name="email_aluno" translatable="false">lucasmitsudo@alunos.utfpr.edu.br</string>
    <string name="sobre_app">About the App:</string>
    <string name="descricao_app">Application was created so that the user has control of their own collection of Sneakers.</string>
    <string name="nome_utfpr">Federal University of Paraná (UTFPR)</string>
    <string name="erro_abrir_site">The page could not be opened!</string>


    <string name="alt_snk">Change Sneaker</string>
    <string name="novo_snk">New Sneaker</string>
    <string name="cancelar">Cancel</string>
    <string name="adicionar">Add</string>
    <string name="item_excluido">"Item Excluded! "</string>
    <string name="url_utfpr" translatable="false">http://www.utfpr.edu.br</string>

    <string name="mode">Light Mode</string>

    <string name="aviso">Warning</string>
    <string name="ok" translatable="false">OK</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="confirmacao">Confirmation</string>
    <string name="confirmar_pargar">Do you really want to delete?</string>

    <string name="sneaker" translatable="false">Sneaker</string>
    <string name="chinelo">Slipper</string>
    <string name="bota">Boot</string>

    <string name="nenhum_tipo">Type not created!</string>
    <string name="alterar_tipo">Change type</string>
    <string name="novo_tipo">New type</string>
    <string name="descricao_vazia">Empty description!</string>
    <string name="tipo_usado">Type is beeing used and cannot be deleted!</string>
    <string name="descricao_usada">This description has been used in other type!</string>
    <string name="tipos">Types</string>
    <string name="deseja_realmente_apagar">Do really want to delete?</string>
</resources>